--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             background-attachment: fixed;
         }
 
-        /* * LIQUID GLASS STYLES
+        /* * LIQUID GLASS STYLES.
          */
         .glass-panel {
             background: var(--glass-bg);
