logo added to outside

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sujan Timalsina - Thumbnail Designer</title>
-    <link rel="icon" type="image/png" href="/logo_png1.png">
+
+
+<link rel="icon" type="image/png" sizes="32x32" href="/logo_png1.png">
+
+<link rel="icon" type="image/png" sizes="159x159" href="/logo_png.png">
+
+<link rel="apple-touch-icon" href="/logo_png.png">
+
     
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
