add favicon files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sujan Timalsina - Thumbnail Designer</title>
 
-
-<link rel="icon" type="image/png" sizes="32x32" href="/logo_png1.png">
-
-<link rel="icon" type="image/png" sizes="159x159" href="/logo_png.png">
-
-<link rel="apple-touch-icon" href="/logo_png.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
     
     <!-- Load Tailwind CSS -->
