--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sujan Timalsina - Thumbnail Designer</title>
-
+    <title>Sujan Timalsina - Best Nepali Thumbnail & Graphic Designer</title>
+    <!--SEO-->
+    <meta name="description" content="Sujan Timalsina - Expert YouTube Thumbnail Designer in Nepal. Boosting CTR for top creators with high-quality,Gaming Thumbnail,Laka Gaming Thumbnail Creator, Tonde Gamer, Abhishek Yt, All Niches Thumbnail Available, Nepal top 1 Thumbnail Designer.">
+    <meta name="author" content="Sujan Timalsina">
+    <link rel="canonical" href="https://timalsinasujan.com.np/" />
+    <meta name="robots" content="index, follow">     
+    
 <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
